// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview|SelectionStep.proposals fetches the proposals from a selection step with status 4 & type 1 filters 1`] = `
Object {
  "node": Object {
    "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "author": Object {
              "userType": Object {
                "id": "1",
                "name": "Citoyen",
              },
            },
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
            "title": "Ravalement de la façade de la bibliothèque municipale",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
      ],
      "totalCount": 1,
    },
    "title": "Sélection",
  },
}
`;

exports[`Preview|SelectionStep.proposals fetches the proposals from a selection step with status 5 & type 1 filters 1`] = `
Object {
  "node": Object {
    "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "author": Object {
              "userType": Object {
                "id": "1",
                "name": "Citoyen",
              },
            },
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
            "title": "Rénovation du gymnase",
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": null,
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "email": null,
                      "id": "VXNlcjp1c2VyQWRtaW4=",
                    },
                  },
                },
              ],
            },
          },
        },
      ],
      "totalCount": 1,
    },
    "title": "Sélection",
  },
}
`;
